# docparser

./: LICENSE  README.md  pyproject.toml
docparser/: __init__.py  pdf_parser.py
mdextract/: __init__.py  csv_parser.py  docx_parser.py  parser.py  pdf_parser.py  xlsx_parser.py
